--- a/.github/workflows/aggiorna_menu.yml
+++ b/.github/workflows/aggiorna_menu.yml
@@ -9,6 +9,7 @@ on:
   push:
     paths:
       - 'spesa/ricette_utenti/**'
+      - 'spesa/allergeni.json' # Si attiva se modifichi gli allergeni
 
 concurrency:
   group: menu_update
@@ -32,19 +33,18 @@ jobs:
           python-version: '3.10' 
 
       - name: Installa Librerie
-        # Aggiornamento forzato per vedere i nuovi modelli
         run: |
           pip install --upgrade pip
           pip install -U "google-generativeai>=0.5.0"
 
-      # Parte 1: Se hai premuto il pulsante, analizza le offerte
+      # Parte 1: Analisi Offerte (Solo se richiesto col pulsante)
       - name: 🛒 Analisi Offerte
         if: github.event_name == 'repository_dispatch' && github.event.action == 'start_analysis'
         env:
           GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
         run: python spesa/gestione_offerte.py
 
-      # Parte 2: Aggiorna SEMPRE il menu (così legge eventuali nuove offerte o ricette)
+      # Parte 2: Aggiorna Menu (Sempre)
       - name: 🍳 Aggiorna Menu
         env:
           GEMINI_KEY: ${{ secrets.GEMINI_KEY }}
@@ -55,13 +55,12 @@ jobs:
           git config --global user.name 'Robot Spesa'
           git config --global user.email 'robot@spesa.app'
           
-          # Salva entrambi i file se esistono
-          git add spesa/dati_settimanali.json || true
+          git add spesa/dati_settimanali.json
           git add spesa/offerte.json || true
+          git add spesa/allergeni.json || true
           
-          # Pulisce ricette temporanee
           git rm spesa/ricette_utenti/*.json --ignore-unmatch
           
-          git commit -m "🤖 Aggiornamento Dati" || echo "Nessuna modifica"
+          git commit -m "🤖 Update Completo" || echo "Nessuna modifica"
           git pull --rebase origin main || git pull --rebase origin master
           git push
