--- a/.github/workflows/aggiorna_menu.yml
+++ b/.github/workflows/aggiorna_menu.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Installa Librerie
         run: |
           pip install --upgrade pip
-          # IMPORTANTE: Versione che supporta upload file e lista modelli
-          pip install "google-generativeai>=0.7.2"
+          pip install -U google-generativeai
+          pip install pypdf  # <--- FONDAMENTALE PER LEGGERE I PDF
 
       - name: 🛒 Analisi Offerte
         if: github.event_name == 'repository_dispatch' && github.event.action == 'start_analysis'
@@ -60,6 +60,6 @@ jobs:
           
           git rm spesa/ricette_utenti/*.json --ignore-unmatch
           
-          git commit -m "🤖 Analisi Completata" || echo "Nessuna modifica"
+          git commit -m "🤖 Update Dati" || echo "Nessuna modifica"
           git pull --rebase origin main || git pull --rebase origin master
           git push
