--- a/.github/workflows/aggiorna_menu.yml
+++ b/.github/workflows/aggiorna_menu.yml
@@ -32,11 +32,10 @@ jobs:
         with:
           python-version: '3.10' 
 
-      - name: Installa Librerie
+      - name: Installa Librerie (NO GOOGLE SDK)
         run: |
           pip install --upgrade pip
-          pip install google-generativeai
-          pip install pypdf  # <--- AGGIUNTO QUESTO
+          pip install requests pymupdf
 
       - name: 🛒 Analisi Offerte
         if: github.event_name == 'repository_dispatch' && github.event.action == 'start_analysis'
@@ -56,9 +55,10 @@ jobs:
           
           git add spesa/dati_settimanali.json
           git add spesa/offerte.json || true
+          git add spesa/allergeni.json || true
           
           git rm spesa/ricette_utenti/*.json --ignore-unmatch
           
-          git commit -m "🤖 Update Dati" || echo "Nessuna modifica"
+          git commit -m "🤖 Update Menu & Offerte (REST API)" || echo "Nessuna modifica"
           git pull --rebase origin main || git pull --rebase origin master
           git push
